--- a/ServiceComplex/appsettings.Development.json
+++ b/ServiceComplex/appsettings.Development.json
@@ -29,9 +29,9 @@
   },
 
   "ConnectionStrings": {
-    "ComplexConnection": "Data Source=DESKTOP-T7C1380\\MSSQL2019; Initial Catalog=Read-From-Branch; Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=true;encrypt=false",
-    "ComplexConnection1": "Data Source=DESKTOP-T7C1380\\MSSQL2019;Initial Catalog=876812d7-85ec-4706-9eef-fe26f206e794;Integrated Security=True;Multiple Active Result Sets=True;Encrypt=False;Trust Server Certificate=True",
-    "saleInConnection": "Data Source=DESKTOP-T7C1380\\MSSQL2019; Initial Catalog=SaleIn; Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=true;encrypt=false"
+    "ComplexConnection": "SERVER=192.168.20.87\\saleinstore;User Id=salein;Password=dbkitsalein1394; Initial Catalog=Read-From-Branch; Integrated Security=false;MultipleActiveResultSets=true;TrustServerCertificate=true;encrypt=false",
+    "ComplexConnection1": "SERVER=192.168.20.87\\saleinstore;User Id=salein;Password=dbkitsalein1394;Initial Catalog=876812d7-85ec-4706-9eef-fe26f206e794;Integrated Security=false;Multiple Active Result Sets=True;Encrypt=False;Trust Server Certificate=True",
+    "saleInConnection": "SERVER=192.168.20.87\\saleinstore;User Id=salein;Password=dbkitsalein1394; Initial Catalog=SaleIn; Integrated Security=false;MultipleActiveResultSets=true;TrustServerCertificate=true;encrypt=false"
   },
   "UsedGuid": {
     "guid": "{DE71880F-C10C-49C5-AB9C-B10740346353}"
