--- a/ServiceComplex/appsettings.json
+++ b/ServiceComplex/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     },
     "ConnectionStrings": {
-      "SaleInConnection": "Data Source=DESKTOP-T7C1380\\MSSQL2019;User Id=sa;Password=dbkitsalein1394; Initial Catalog=876812d7-85ec-4706-9eef-fe26f206e794; Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+      "SaleInConnection": "SERVER=192.168.20.87,1433;Data Source=.\\SALEINSTORE;User Id=salin;Password=dbkitsalein1394; Initial Catalog=876812d7-85ec-4706-9eef-fe26f206e794; Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
 
     }
   },
