--- a/ServiceComplex/appsettings.json
+++ b/ServiceComplex/appsettings.json
@@ -1,13 +1,45 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
+
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Override": {
       "Microsoft.AspNetCore": "Warning"
     },
-    "ConnectionStrings": {
-      "SaleInConnection": "SERVER=192.168.20.87,1433;Data Source=.\\SALEINSTORE;User Id=salin;Password=dbkitsalein1394; Initial Catalog=876812d7-85ec-4706-9eef-fe26f206e794; Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
-
-    }
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "Path": "wwwroot\\Logs\\logs.log"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": { "ServerUrl": "http://localhost:5341" }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ]
   },
-  "AllowedHosts": "*"
+
+  "ConnectionStrings": {
+    "ComplexConnection": "SERVER=192.168.20.87\\saleinstore;User Id=salein;Password=dbkitsalein1394; Initial Catalog=Read-From-Branch; Integrated Security=false;MultipleActiveResultSets=true;TrustServerCertificate=true;encrypt=false",
+    "ComplexConnection1": "Data Source=192.168.20.87\\saleinstore;User Id=salein;Password=dbkitsalein1394;Initial Catalog=876812d7-85ec-4706-9eef-fe26f206e794;Integrated Security=false;Multiple Active Result Sets=True;Encrypt=False;Trust Server Certificate=True",
+    "saleInConnection": "SERVER=192.168.20.87\\saleinstore;User Id=salein;Password=dbkitsalein1394; Initial Catalog=SaleIn; Integrated Security=false;MultipleActiveResultSets=true;TrustServerCertificate=true;encrypt=false"
+  },
+  "UsedGuid": {
+    "guid": "{DE71880F-C10C-49C5-AB9C-B10740346353}"
+  }
+
 }
+
+
+
+//Scaffold-DbContext "name=saleInConnection" Microsoft.EntityFrameworkCore.SqlServer -OutputDir SaleInModels -Context SaleinContext
+//Scaffold-DbContext "name=ComplexConnection1" Microsoft.EntityFrameworkCore.SqlServer -OutputDir ComplexModels -Context ComplexContext
