--- a/ServiceComplex/appsettings.Development.json
+++ b/ServiceComplex/appsettings.Development.json
@@ -30,7 +30,7 @@
 
   "ConnectionStrings": {
     "ComplexConnection": "SERVER=192.168.20.87\\saleinstore;User Id=salein;Password=dbkitsalein1394; Initial Catalog=Read-From-Branch; Integrated Security=false;MultipleActiveResultSets=true;TrustServerCertificate=true;encrypt=false",
-    "ComplexConnection1": "SERVER=192.168.20.87\\saleinstore;User Id=salein;Password=dbkitsalein1394;Initial Catalog=876812d7-85ec-4706-9eef-fe26f206e794;Integrated Security=false;Multiple Active Result Sets=True;Encrypt=False;Trust Server Certificate=True",
+    "ComplexConnection1": "Data Source=192.168.20.87\\saleinstore;User Id=salein;Password=dbkitsalein1394;Initial Catalog=876812d7-85ec-4706-9eef-fe26f206e794;Integrated Security=false;Multiple Active Result Sets=True;Encrypt=False;Trust Server Certificate=True",
     "saleInConnection": "SERVER=192.168.20.87\\saleinstore;User Id=salein;Password=dbkitsalein1394; Initial Catalog=SaleIn; Integrated Security=false;MultipleActiveResultSets=true;TrustServerCertificate=true;encrypt=false"
   },
   "UsedGuid": {
@@ -42,4 +42,4 @@
 
 
 //Scaffold-DbContext "name=saleInConnection" Microsoft.EntityFrameworkCore.SqlServer -OutputDir SaleInModels -Context SaleinContext
-//Scaffold-DbContext "name=ComplexConnection1" Microsoft.EntityFrameworkCore.SqlServer -OutputDir ComplexModels -Context ComplexContext
+//Scaffold-DbContext "Data Source=192.168.20.87\saleinstore;User Id=salein;Password=dbkitsalein1394;Initial Catalog=876812d7-85ec-4706-9eef-fe26f206e794;Integrated Security=false;Multiple Active Result Sets=True;Encrypt=False;Trust Server Certificate=True" Microsoft.EntityFrameworkCore.SqlServer -OutputDir ComplexModels -Context ComplexContext
