--- a/ServiceComplex/Properties/launchSettings.json
+++ b/ServiceComplex/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
+      "launchUrl": "https://localhost:44394/Products/Assignment",
       "applicationUrl": "http://localhost:18995",
       "sslPort": 44394
     }
@@ -12,6 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "https://localhost:44394/Products/Assignment",
       "applicationUrl": "http://localhost:5252",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -21,6 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "https://localhost:44394/Products/Assignment",
       "applicationUrl": "https://localhost:7122;http://localhost:5252",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -29,6 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "https://localhost:44394/Products/Assignment",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
